- Companion: Added 'Collect' button the the 'Bags' steps, so you can quickly loot the items from the bank.
- Companion: T0.5 Class belt & gloves are now set to always be in bags, so players that have equipped them doesn't get griefed on release since they can't mail them.
- Companion: No longer only loots 1 stack after the prepatch.

3.18 (2026-01-24)
- Added Main Route turnin
- Fixed Coordinates for dungeons with prepatch
- Fixed spelling mistake in the "Item Delete Warning" window
- Fix wrong text in Extras - Mailbox description
- Clarify that the "Completion Warnings" settings is not guaranteed to work in its tooltips
- Added quest comment for Anthion's Strange Request
- Fixed the second "Of Love and Family" having the first "Of Love and Family" as prequest in the strat route.
- The "Black Dragonflight Molt" Item now has its quests correctly assigned. It should now show the item tooltip.
- Quests tab now doesn't include completed quests, as well as ignored quests, in the "total quest count" at the top
- Removed "Assisting Arch Druid Runetotem" as a prequest to Un'goro Soil (and Morrowgrain) since the quest is removed in the prepatch for TBC
- Made "To Serve Kum'isha" an Expensive Quest in the Quests tab
- Added some special search filters on the "Quests" tab. You can search for ready:yes, ready:no, completed:yes, completed:no to only show quests matching that criteria. Use "ready:no" to see what you have left to work on
- Minor Fixes and QoL changes to the guide

3.17c
- Fixed the "/tbcprep ghetto" command to work with the TBC Prepatch changes
- Fixed Paladin T0,5 questline in prep guide

3.17b
- Actually fixed item for 'The Battle of Darrowshire' quest

3.17 (2026-01-14)
- Fixed comment for 'The Twilight Lexicon'
- Fixed item for 'The Battle of Darrowshire' quest
- Fixed the DireMaul Blacksmithing selection crashing the addon
- Added new flightpaths added to Kalimdor & Eastern Kingdoms
- Changed all routes to fly to Emerald Sanctuary in felwood now.